js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-generatorexpression.js


/*---
description: PrimaryExpression ArrayLiteral; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

function * () {} = 1;
